--- a/package.json
+++ b/package.json
@@ -20,5 +20,8 @@
     "react-multi-carousel": "^2.8.3",
     "react-responsive-carousel": "^3.2.23",
     "tailwindcss": "3.3.1"
+  },
+  "devDependencies": {
+    "@tailwindcss/typography": "^0.5.9"
   }
 }
